fixed the item circles and ticks alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1633,7 +1633,7 @@ padding: 0px 3px;
     height:26px;
     position:absolute;
     right:30px;
-    top:9px;
+    top:10px;
 }
 
 .panel-content .collapse span[class*="completion"] {
